<resources>
    <string name="app_name">MyBink</string>
    <string name="dev_name">Kubra</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="scan_barcode">Scan barcode</string>
    <string name="show_countries">Show Countries</string>
    <string name="change_password">Change password</string>

    <string name="reset_password_description">Renew your password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_again">New Password Again</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_fragment_one">Hello fragment 1</string>
    <string name="hello_fragment_two">Hello fragment 2</string>

    <string name="title_1">Loyality card</string>
    <string name="title_2">Favorite card</string>
    <string name="title_3">Fancy card</string>
    <string name="title_4">Trend card</string>

    <string name="text_1">This is my loyality card app.</string>

    <string name="add_card">Add Card</string>

</resources>
