<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_change_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bink.mybink.view.ChangePasswordActivity">
    <TextView
        android:id="@+id/activity_reset_password_description"
        style="@style/bold_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/reset_password_description" />

    <LinearLayout
        android:id="@+id/activity_reset_password_middle_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_below="@+id/activity_reset_password_description"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_reset_password_old_password"
                style="@style/ResetPassword"
                android:hint="@string/old_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel=""
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_reset_password_new_password"
                style="@style/ResetPassword"
                android:hint="@string/new_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel=""
                android:imeOptions="actionNext" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/activity_reset_password_new_password_again"
                style="@style/ResetPassword"
                android:hint="@string/new_password_again"
                android:imeActionId="@+id/login"
                android:imeActionLabel=""
                android:imeOptions="actionDone" />

        </android.support.design.widget.TextInputLayout>


    </LinearLayout>

    <Button
        android:id="@+id/activity_reset_password_continue_button"
        style="@style/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_reset_password_middle_content"
        android:layout_marginTop="20dp"
        android:text="@string/change_password" />


</RelativeLayout>
